<resources>
    <string name="app_name">Corona Update</string>
    <string name="search_hint">Search Country</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_death">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="serious_critical">Serious/Critical</string>
    <string name="active_cases">Active Cases</string>
    <string name="affected_country">Affected Countries</string>
    <string name="notice">N.B. Rate based on closed cases</string>
    <string name="new_cases">New Cases</string>
</resources>
